Release/5 (#250)
* fix: исправление сущности источника

* fix: исправление сущности источника

* fix: Добавление разделителя в основных характеристиках класса.

* fix: Добавление разделителя в основных характеристиках класса.

* Фильтры + поиск (#239)

* fix: Исправление request источников

* fix: Исправление request источников

* fix: Исправление источников

* fix: Исправление источников

* Сохранение фильтров по источникам (#241)

* Сохранение фильтра по источникам

* Сохранение фильтров по источникам

* feat: Список пользователей и ролей.

* feat: Список пользователей и ролей.

* feat: Список пользователей и ролей.

* feat: Список пользователей и ролей.

* fix: Список пользователей и ролей.

* Сохранение фильтров по источникам (#242)

Co-authored-by: Vitaliy Unguryan <gm.magistr@gmail.com>

* Фикс фильтров по  источникам (#243)

* fix: добавление суффикса к черте в предысториях (для просвещенный в магию)

* fix: добавление суффикса к черте в предысториях (для просвещенный в магию)

* fix: исправление фильтров для источников

* fix: исправление фильтров для источников

* fix: исправление фильтров для источников

* fix:отображать в фильтре источников заклинаний только те для которых есть заклинания

* fix: отображение в фильтре источников бестиария только те для которых есть существа

* feat: Добавление фильтрации в классах (кость хитов)

* feat: Добавление фильтрации в видах (тип существа)

* fix: исправление получения фильтров для профиля

* fix: SourceSavedFilterService.java

* fix: исправляем фильтрацию по источникам

* fix: исправляем сохранения фильтров по умолчанию

* fix: исправляем сохранения фильтров по умолчанию

* fix: исправляем сохранения фильтров по умолчанию

* fix: исправление доступных источников в разделах

* fix: исправление раздела источников

* fix: исправление раздела источников

* fix: добавление индексов на полк source

* fix:  фильтрация по источникам в классах и видах

* fix: фильтрация подклассов по сохраненным источникам

* fix: фильтра