@@ -1,7 +1,9 @@
 package club.ttg.dnd5.domain.character_class.service;
 
 import club.ttg.dnd5.domain.character_class.rest.dto.ClassAbilityImprovementResponse;
+import club.ttg.dnd5.domain.character_class.rest.dto.ClassQueryRequest;
 import club.ttg.dnd5.domain.source.model.Source;
+import club.ttg.dnd5.domain.source.service.SourceSavedFilterService;
 import club.ttg.dnd5.domain.source.service.SourceService;
 import club.ttg.dnd5.domain.character_class.model.CasterType;
 import club.ttg.dnd5.domain.character_class.model.CharacterClass;
@@ -16,19 +18,18 @@ import club.ttg.dnd5.domain.common.repository.GalleryRepository;
 import club.ttg.dnd5.domain.common.rest.dto.SourceRequest;
 import club.ttg.dnd5.exception.EntityExistException;
 import club.ttg.dnd5.exception.EntityNotFoundException;
-import club.ttg.dnd5.util.SwitchLayoutUtils;
+
 import lombok.RequiredArgsConstructor;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.CollectionUtils;
-import org.springframework.util.StringUtils;
 
-import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -36,22 +37,18 @@ public class ClassService {
 
     private final ClassRepository classRepository;
     private final ClassMapper classMapper;
+    private final ClassQueryDslSearchService classQueryDslSearchService;
     private final SourceService sourceService;
     private final GalleryRepository galleryRepository;
+    private final SourceSavedFilterService sourceSavedFilterService;
 
-    public List<ClassShortResponse> findAllClasses(String searchLine, String... sort) {
-        Collection<CharacterClass> classes;
-
-        if (StringUtils.hasText(searchLine)) {
-            String invertedSearchLine = SwitchLayoutUtils.switchLayout(searchLine);
-            classes = classRepository.findAllSearch(searchLine, invertedSearchLine, Sort.by(sort));
-        } else {
-            classes = classRepository.findAllByParentIsNull(Sort.by(sort));
-        }
-
-        return classes.stream()
-                .map(classMapper::toShortResponse)
-                .toList();
+    public List<ClassShortResponse> search(ClassQueryRequest request) {
+        var predicate = ClassPredicateBuilder.build(request);
+        return classQueryDslSearchService.search(predicate, request.getPage(), request.getPageSize())
+                .stream()
+                .filter(c -> (request.getSearch() != null && !request.getSearch().isEmpty()) || c.getParent() == null)
+                .map(classMapper::toShort)
+                .collect(Collectors.toList());
     }
 
     public boolean exists(String url) {
@@ -91,7 +88,8 @@ public class ClassService {
             }
         }
         saveGallery(request.getUrl(), request.getGallery());
-        return classMapper.toDetailedResponse(classRepository.save(toSave));
+        CharacterClass saved = classRepository.save(toSave);
+        return classMapper.toDetailedResponse(saved);
     }
 
     @Transactional
@@ -128,26 +126,30 @@ public class ClassService {
     }
 
     public List<ClassShortResponse> getSubclasses() {
-        return classRepository.findAllByParentIsNotNull().stream()
+
+        return classRepository.findAllByParentIsNotNull()
+                .stream()
                 .filter(characterClass -> !characterClass.isHiddenEntity())
-                .map(classMapper::toShortResponse)
+                .map(classMapper::toShort)
                 .toList();
     }
 
     public List<ClassShortResponse> getSubclasses(String parentUrl) {
         CharacterClass characterClass = classRepository.findByUrl(parentUrl)
                 .orElseThrow(() -> new EntityNotFoundException("Класс не найден для URL:" + parentUrl));
-
+        var sources = sourceSavedFilterService.getSavedSources();
         if (characterClass.isHiddenEntity()) {
             throw new EntityNotFoundException("Класс не найден для URL:" + parentUrl);
         }
 
-        return characterClass.getSubclasses().stream()
+        return characterClass.getSubclasses()
+                .stream()
+                .filter(subclass -> sources.contains(subclass.getSource().getAcronym()))
                 .sorted(Comparator
                         .comparing((CharacterClass c) -> c.getSource().getType().ordinal())
                         .thenComparing(CharacterClass::getName)
                 )
-                .map(classMapper::toShortResponse)
+                .map(classMapper::toShort)
                 .toList();
     }
 
