@@ -1,6 +1,8 @@
 package club.ttg.dnd5.domain.species.service;
 
+import club.ttg.dnd5.domain.source.service.SourceSavedFilterService;
 import club.ttg.dnd5.domain.source.service.SourceService;
+import club.ttg.dnd5.domain.species.rest.dto.SpeciesQueryRequest;
 import club.ttg.dnd5.domain.species.model.Species;
 import club.ttg.dnd5.domain.species.repository.SpeciesRepository;
 import club.ttg.dnd5.domain.species.rest.dto.SpeciesDetailResponse;
@@ -10,10 +12,8 @@ import club.ttg.dnd5.domain.species.rest.mapper.SpeciesMapper;
 import club.ttg.dnd5.exception.ApiException;
 import club.ttg.dnd5.exception.EntityExistException;
 import club.ttg.dnd5.exception.EntityNotFoundException;
-import club.ttg.dnd5.util.SwitchLayoutUtils;
 import lombok.RequiredArgsConstructor;
 import org.springframework.cache.annotation.CacheEvict;
-import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -23,13 +23,16 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class SpeciesService {
     private final SpeciesRepository speciesRepository;
     private final SourceService sourceService;
+    private final SpeciesQueryDslSearchService speciesQueryDslSearchService;
     private final SpeciesMapper speciesMapper;
+    private final SourceSavedFilterService sourceSavedFilterService;
 
     public boolean exists(String url) {
         return speciesRepository.existsById(url);
@@ -60,17 +63,13 @@ public class SpeciesService {
                 .toList();
     }
 
-    public List<SpeciesShortResponse> getSpecies(String searchLine, String[] sort) {
-        Collection<Species> specieses;
-        if (StringUtils.hasText(searchLine)) {
-            String invertedSearchLine = SwitchLayoutUtils.switchLayout(searchLine);
-            specieses =  speciesRepository.findAllSearch(searchLine, invertedSearchLine, Sort.by(sort));
-        } else {
-            specieses = speciesRepository.findAllByParentIsNull(Sort.by(sort));
-        }
-        return specieses.stream()
+    public List<SpeciesShortResponse> search(SpeciesQueryRequest request) {
+        var predicate = SpeciesPredicateBuilder.build(request);
+        return speciesQueryDslSearchService.search(predicate, request.getPage(), request.getPageSize())
+                .stream()
+                .filter(s -> (request.getSearch() != null && !request.getSearch().isEmpty()) || s.getParent() == null)
                 .map(speciesMapper::toShort)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Transactional
@@ -100,9 +99,12 @@ public class SpeciesService {
     }
 
     public Collection<SpeciesShortResponse> getAllLineages(String url) {
+        var sources = sourceSavedFilterService.getSavedSources();
+
         Species species = speciesRepository.findById(url)
                 .orElseThrow(() -> new EntityNotFoundException("Вид не найден URL: " + url));
         return species.getLineages().stream()
+            .filter(lineages -> sources.contains(lineages.getSource().getAcronym()))
             .map(speciesMapper::toShort)
             .toList();
     }
